--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
   "service": "ServicoSysPDV",
   "baseIP": "192.168.0.",
+  "user":"appc\\camilo.henrique",
+  "pw":"Mousegamer01",
   "port": 3000
 }
